# A-Maze-Ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  mazegen-1.0.0-py3-none-any.whl  pyproject.toml
mazegen/: __init__.py  bonus_pattern_color.py  bonus_prim.py  cell.py  cli.py  config.py  generator.py  output.py  pathfinding.py  pattern.py  render.py
