[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Reusable maze generation library for the 42 A-Maze-ing project"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "fjaramil" },
    { name = "digonza2" },
]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]
